# tap-gong

./: .gitignore  meltano.yml  pyproject.toml  tox.ini
tap_gong/: client.py  config_helper.py  tap.py
tap_gong/streams/: aggregated_activity.py  calls.py  interaction_stats.py  users.py
tap_gong/tests/: test_core.py
