[tool.poetry]
name = "tap-gong"
version = "0.1.0.2"
description = "`tap-gong` is a Singer tap for Gong, built with the Meltano SDK for Singer Taps."
readme = "README.md"
authors = ["Stephen Bailey"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.8"
importlib-resources = { version = "==6.1.*", python = "<3.9" }
singer-sdk = "~0.36.1"
fs-s3fs = { version = "~=1.1.1", optional = true }
requests = "~=2.31.0"
python-dateutil = ">=2.9.0"

[tool.poetry.dev-dependencies]
pytest = ">=7.4.0"
singer-sdk = { version="~=0.36.1", extras = ["testing"] }

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true

[tool.ruff]
src = ["tap_gong"]
target-version = "py38"

[tool.ruff.lint]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_gong"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-gong = 'tap_gong.tap:TapGong.cli'
